fix: fix header overflow problem in mobile

--- a/src/layouts/common/header/index.styl
+++ b/src/layouts/common/header/index.styl
@@ -97,6 +97,7 @@
   .header
     // height 130px
     //padding 0
+    overflow-x hidden
     .drawer
       background-color: transparent;
       position fixed
